@@ -4,6 +4,7 @@ TODO: maybe add mincore support? available on at leats darwin, solaris, linux, f
 
 1.0
 	- added msync, mtouch support (untested).
+        - added sync_file_range (untested).
         - fixed custom support.
         - use a more robust feed-add detection method.
 	- "outbundled" from IO::AIO.
